tests/ui/display-underscore.stderr
error: in expressions, `_` can only be used on the left-hand side of an assignment
 --> tests/ui/display-underscore.rs:4:9
  |
4 | #[error("{_}")]
  |         ^^^^^ `_` not allowed here
